fix accessibility issues for tags and contrast

--- a/code/style.css
+++ b/code/style.css
@@ -167,6 +167,7 @@ body {
     font-family: Montserrat;
     font-size: 28px;
     font-weight: bold;
+    text-shadow: 0px 0px 6px rgb(0 0 0);
 }
 
 .project-image {
@@ -191,10 +192,9 @@ body {
 }
 
 .tag {
-    font-size: 9px;
+    font-size: 11px;
     background-color: #FDDFE7;
-    padding: 10px;
-    padding: 6px;
+    padding: 6px 10px;
 }
 
 .skills-container {
